# dx_rt

./: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES.md  SanityCheckForDebian.sh  Taskfile.yml  build.ps1  build.sh  install.sh  uninstall.sh
.github/workflows/: build-deb.yml
cli/: CMakeLists.txt  dxcli.cpp  dxparse.cpp  dxrtd.cpp  dxrun.cpp
cli/dxbenchmark/: CMakeLists.txt  dxbenchmark.cpp
cli/dxbenchmark/core/include/: render.h  runner.h
cli/dxbenchmark/core/src/: render.cpp  runner.cpp
cli/dxtop/: CMakeLists.txt  dxtop.cpp
cli/dxtop/core/: npu_core.cpp  npu_monitor.cpp
cli/dxtop/core/data_source/: noservice_data_source.cpp
cli/dxtop/core/ipc/: dxtop_ipc_client.cpp  dxtop_ipc_client.h
cmake/: dxrt.cfg.cmake  dxrt.clang.cmake  dxrt.function.cmake  toolchain.aarch64.cmake
debian_m1/: changelog  clean  rules
docs/: mkdocs.yml
docs/source/docs/: 01_DXNN_Runtime_Overview.md  02_Installation_on_Linux.md  03_Installation_on_Windows.md  04_Model_Inference.md  05_Command_Line_Interface.md  06_Inference_API.md  07_Multi_Input_Inference.md  08_Global_Instance.md  09_01_C++_Tutorials.md  09_02_Python_Tutorials.md  10_01_C++_API_Reference.md  10_02_Python_API_Reference.md  Appendix_Change_Log.md
docs/source/stylesheets/: extra.css
dx_report/sanity/: Sanity.sh
examples/cpp/: CMakeLists.txt
examples/cpp/check_versions/: check_versions.cpp
examples/cpp/device_monitoring/: CMakeLists.txt  device_monitoring.cpp
examples/cpp/display_async_pipe/: display_async_pipe.cpp
examples/cpp/display_async_precreated_engines/: display_async_precreated_engines.cpp
examples/cpp/display_async_thread/: display_async_thread.cpp
examples/cpp/display_async_thread_local_engines/: display_async_thread_local_engines.cpp
examples/cpp/display_async_wait/: display_async_wait.cpp
examples/cpp/multi_input_model_inference/: multi_input_model_inference.cpp
examples/cpp/run_async_input_release/: run_async_input_release.cpp
examples/cpp/run_async_model/: run_async_model.cpp
examples/cpp/run_async_model_bound/: run_async_model_bound.cpp
examples/cpp/run_async_model_bufcount/: run_async_model_bufcount.cpp
examples/cpp/run_async_model_conf/: run_async_model_conf.cpp
examples/cpp/run_async_model_output/: run_async_model_output.cpp
examples/cpp/run_async_model_profiler/: run_async_model_profiler.cpp
examples/cpp/run_async_model_thread/: run_async_model_thread.cpp
examples/cpp/run_async_model_wait/: run_async_model_wait.cpp
examples/cpp/run_batch_model/: run_batch_model.cpp
examples/cpp/run_sync_model/: run_sync_model.cpp
examples/cpp/run_sync_model_bound/: run_sync_model_bound.cpp
examples/cpp/run_sync_model_bufcount/: run_sync_model_bufcount.cpp
examples/cpp/run_sync_model_memory/: run_sync_model_memory.cpp
examples/cpp/run_sync_model_output/: run_sync_model_output.cpp
examples/python/: device_monitoring.py  run_async_model_profiler.py  run_benchmark_model.py
lib/: CMakeLists.txt  cli.cpp  config.cmake.in  configuration.cpp  cpu_handle.cpp  cpu_handle_worker.cpp  device_info_status.cpp  device_version.cpp  driver.cpp  dxrt_c_api.cpp  dxrt_export.map  filesys_support.cpp  inference_engine.cpp  inference_job.cpp  multiprocess_memory.cpp  npu_format_handler.cpp  npu_memory_cache.cpp  objects_pool.cpp  ort_delay_load.cpp  ort_profile_aggregator.cpp  profiler.cpp  request.cpp  task.cpp  task_data.cpp  user_event_store.cpp  xnn_kernel.cpp
lib/data/: ppcpu_data.inl
lib/device_pool/: acc_device_task_layer.cpp  acc_device_task_layer_register_pcie.cpp  acc_device_task_layer_register_vnpu.cpp  device_core.cpp  device_dispatcher.cpp  device_dispatcher.h  device_pool.cpp  device_task_layer.cpp  inference_context.cpp  inference_context.h  nfh_layer.cpp  no_service_layer.cpp  request_response_class.cpp  service_abstract_layer.cpp  service_layer.cpp  service_layer_dynamic_ipc_bridge.cpp  service_layer_dynamic_ipc_bridge.hpp  service_layer_factory.cpp  service_layer_factory.hpp  std_device_task_layer.cpp  stop_gate.cpp  stop_gate.hpp
lib/device_shm/: monitor_shared_memory.h  shared_memory_reader.cpp  shared_memory_reader.h  shared_memory_writer.cpp  shared_memory_writer.h  shared_memory_writing_thread.cpp  shared_memory_writing_thread.hpp
lib/driver_adapter/: linux_driver_adapter.cpp  network_driver_adapter.cpp
lib/dxrt_service/: bound_manager.cpp  bound_manager.h  dxrt_service_err.cpp  dxrt_service_v2.cpp  dxrt_service_v2.hpp  dxrt_service_v2_bridge.cpp  dxrt_service_v2_bridge.hpp  dxrt_service_v2_main.cpp  dxrt_service_v2_main_logic.hpp  dxrtd_service_v2_main_logic.cpp  memory_service.cpp  memory_service.hpp  process_task_info_store.hpp  process_with_device_info.cpp  process_with_device_info.h  request_manager.cpp  schedule_service.cpp  scheduler_service.h  service_device.cpp  service_device.h  service_error.h
lib/dynamic_ipc/protocol/: ipc_packet.cpp  ipc_packet.hpp  ipc_packet_client.cpp  ipc_packet_client.hpp  ipc_packet_handler_registry.cpp  ipc_packet_handler_registry.hpp  ipc_protocol_limits.hpp  memory_type.hpp
lib/dynamic_ipc/shm/: memfd_client.cpp  memfd_client.h  memfd_handle_transfer.cpp  memfd_handle_transfer.h  memfd_service.cpp  memfd_service.h  shared_memory_syscall_adapter.cpp  shared_memory_syscall_adapter.h  shm.h  shm_error.h
lib/dynamic_ipc/transport/: ipc_channel.cpp  ipc_channel.hpp  ipc_channel_linux.cpp  ipc_channel_windows.cpp  ipc_connector.hpp  (+12 more)
lib/exception/: exception.cpp  server_err.cpp
packaging/: dxrt.service  postinst  prerm
python_package/: BUILD_WHEELS.md  README.md  build_all_wheels.sh  build_wheels.bat  pyproject.toml
python_package/cli/: run_model.py
python_package/src/dx_engine/: __init__.py  configuration.py  device_status.py  dtype.py  inference_engine.py  inference_option.py  profiler.py  runtime_event_dispatcher.py  utils.py  version.py
python_package/src/dx_engine/capi/: CMakeLists.txt  __init__.py  py_configuration.cpp  py_device_status.cpp  py_inference_engine.cpp  py_profiler.cpp  py_runtime_event_dispatcher.cpp
scripts/: create_prebuilt.sh
tool/profiler/: parse.py  plot.py  plot_html.py
(+81 files in other folders)
